Move from svn to github and various fixes: -    fix rt.cpan.org#142095:IfDefine refined -    fix rt.cpan.org#118746:clarify variable name chars -    fix rt.cpan.org#139261: include dirs -    fixed license to artistic_2 -    fix repo+version

--- a/README
+++ b/README
@@ -80,14 +80,14 @@ UPDATE
 COPYRIGHT
        Config::General
        Config::General::Extended
-           Copyright (c) 2000-2015 by Thomas Linden <tom@daemon.de>
+           Copyright (c) 2000-2022 by Thomas Linden <tom@daemon.de>
 
        Config::General::Interpolated
            Copyright (c) 2001 by Wei-Hon Chen <plasmaball@pchome.com.tw>
-	   Copyright (c) 2002-2014 by Thomas Linden <tom@daemon.de>.
+	   Copyright (c) 2002-2022 by Thomas Linden <tom@daemon.de>.
 
        This library is free software; you can redistribute it
-       and/or modify it under the same terms as Perl itself.
+       and/or modify it under the terms of the Artistic 2.0 license.
 
 HOMEPAGE
 
@@ -104,4 +104,4 @@ AUTHOR
 
 
 VERSION
-	2.63
+	2.65
